--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -56,6 +56,8 @@ if '[ -f /usr/local/lib/python2.7/dist-packages/powerline/bindings/tmux/powerlin
    'source /usr/local/lib/python2.7/dist-packages/powerline/bindings/tmux/powerline.conf'
 if '[ -f /usr/local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf ]' \
    'source /usr/local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf'
+if '[ -f /usr/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf ]' \
+   'source /usr/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf'
 
 
 ####################################
