workable version now, no need python powerline and font

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -10,13 +10,16 @@ set -s escape-time 0                      # fastest command sequences
 set -sg repeat-time 600                   # increase repeat timeout
 set -s quiet on                           # disable various messages
 
-set -g prefix2 C-a                        # GNU-Screen compatible prefix
-bind C-a send-prefix -2
+# set -g prefix2 C-a                        # GNU-Screen compatible prefix
+# bind C-a send-prefix -2
+
+# remap prefix to Control + q
+set -g prefix C-q
+# bind 'C-a C-a' to type 'C-a'
+bind C-q send-prefix
+unbind C-b
 
 set -g history-limit 5000                 # boost history
-
-# edit configuration
-bind e new-window -n '~/.tmux.conf.local' "sh -c '\${EDITOR:-vim} ~/.tmux.conf.local && tmux source ~/.tmux.conf && tmux display \"~/.tmux.conf sourced\"'"
 
 # reload configuration
 bind r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
@@ -63,8 +66,23 @@ bind -r h select-pane -L  # move left
 bind -r j select-pane -D  # move down
 bind -r k select-pane -U  # move up
 bind -r l select-pane -R  # move right
-bind > swap-pane -D       # swap current pane with the next one
-bind < swap-pane -U       # swap current pane with the previous one
+
+# Spliting panes
+bind ` split-window -v
+bind = split-window -h
+bind - split-window -h
+bind 0 split-window -h
+
+# Widows
+bind u confirm kill-window
+bind U confirm kill-server
+
+# Emacs start up
+bind E new-window -n EMACS "emacs -nw"
+bind e splitw -v -p 50 "emacs -nw"
+
+bind-key < command-prompt -p "join pane from:"  "join-pane -s '%%'"
+bind-key > command-prompt -p "send pane to:"  "join-pane -t '%%'"
 
 # maximize current pane
 bind + run 'cut -c3- ~/.tmux.conf | sh -s maximize_pane'
@@ -86,52 +104,52 @@ bind Tab last-window        # move to last active window
 bind m run "cut -c3- ~/.tmux.conf | sh -s toggle_mouse"
 
 
-# -- urlview -------------------------------------------------------------------
-
-bind U run "cut -c3- ~/.tmux.conf | sh -s urlview #{pane_id}"
-
-
-# -- facebook pathpicker -------------------------------------------------------
-
-bind F run "cut -c3- ~/.tmux.conf | sh -s fpp #{pane_id}"
-
-
-# -- list choice ---------------------------------------------------------------
-
-bind -t vi-choice h tree-collapse
-bind -t vi-choice l tree-expand
-run -b 'tmux bind -t vi-choice K start-of-list 2> /dev/null'
-run -b 'tmux bind -t vi-choice J end-of-list 2> /dev/null'
-bind -t vi-choice H tree-collapse-all
-bind -t vi-choice L tree-expand-all
-bind -t vi-choice Escape cancel
+# # -- urlview -------------------------------------------------------------------
+#
+# bind U run "cut -c3- ~/.tmux.conf | sh -s urlview #{pane_id}"
+#
+#
+# # -- facebook pathpicker -------------------------------------------------------
+#
+# bind F run "cut -c3- ~/.tmux.conf | sh -s fpp #{pane_id}"
 
 
-# -- edit mode -----------------------------------------------------------------
-
-# the following vi-copy bindings match my vim settings
-#   see https://github.com/gpakosz/.vim.git
-bind -ct vi-edit H start-of-line
-bind -ct vi-edit L end-of-line
-bind -ct vi-edit q cancel
-bind -ct vi-edit Escape cancel
-
-
-# -- copy mode -----------------------------------------------------------------
-
-bind Enter copy-mode # enter copy mode
-bind b list-buffers  # list paster buffers
-bind p paste-buffer  # paste from the top pate buffer
-bind P choose-buffer # choose which buffer to paste from
-
-# the following vi-copy bindings match my vim settings
-#   see https://github.com/gpakosz/.vim.git
-bind -t vi-copy v begin-selection
-bind -t vi-copy C-v rectangle-toggle
-bind -t vi-copy y copy-selection
-bind -t vi-copy Escape cancel
-bind -t vi-copy H start-of-line
-bind -t vi-copy L end-of-line
+# # -- list choice ---------------------------------------------------------------
+#
+# bind -t vi-choice h tree-collapse
+# bind -t vi-choice l tree-expand
+# run -b 'tmux bind -t vi-choice K start-of-list 2> /dev/null'
+# run -b 'tmux bind -t vi-choice J end-of-list 2> /dev/null'
+# bind -t vi-choice H tree-collapse-all
+# bind -t vi-choice L tree-expand-all
+# bind -t vi-choice Escape cancel
+#
+#
+# # -- edit mode -----------------------------------------------------------------
+#
+# # the following vi-copy bindings match my vim settings
+# #   see https://github.com/gpakosz/.vim.git
+# bind -ct vi-edit H start-of-line
+# bind -ct vi-edit L end-of-line
+# bind -ct vi-edit q cancel
+# bind -ct vi-edit Escape cancel
+#
+#
+# # -- copy mode -----------------------------------------------------------------
+#
+# bind Enter copy-mode # enter copy mode
+# bind b list-buffers  # list paster buffers
+# bind p paste-buffer  # paste from the top pate buffer
+# bind P choose-buffer # choose which buffer to paste from
+#
+# # the following vi-copy bindings match my vim settings
+# #   see https://github.com/gpakosz/.vim.git
+# bind -t vi-copy v begin-selection
+# bind -t vi-copy C-v rectangle-toggle
+# bind -t vi-copy y copy-selection
+# bind -t vi-copy Escape cancel
+# bind -t vi-copy H start-of-line
+# bind -t vi-copy L end-of-line
 
 # copy to Mac OSX pasteboard
 if -b 'which -s reattach-to-user-namespace' 'bind y run "tmux save-buffer - | reattach-to-user-namespace pbcopy"'
