--- a/tmux/old/tmux.conf
+++ b/tmux/old/tmux.conf
@@ -1,4 +1,4 @@
-# remap prefix to Control + a
+# remap prefix to Control + q
 set -g prefix C-q
 # bind 'C-a C-a' to type 'C-a'
 bind C-q send-prefix
