--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -77,3 +77,14 @@ bind-key > command-prompt -p "send pane to:"  "join-pane -t '%%'"
 # Create a new window from you pane          => PREFIX !
 # Send current pane to others                => PREFIX >
 # Get pane from others                       => PREFIX <
+
+# THEME
+set -g status-bg black
+set -g status-fg white
+set -g window-status-current-bg white
+set -g window-status-current-fg black
+set -g window-status-current-attr bold
+set -g status-interval 60
+set -g status-left-length 30
+set -g status-left '#[fg=green](#S) #(whoami)'
+set -g status-right '#[fg=yellow]#(cut -d " " -f 1-3 /proc/loadavg)#[default] #[fg=white]%H:%M#[default]'
