useful Changes from real work feeling.
Kill-Server should always be typed into the `:`

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -39,7 +39,7 @@ bind -r L resize-pane -R 5
 
 # Widows
 bind u confirm kill-window
-bind U confirm kill-server
+bind U kill-window
 
 # Emacs start up
 bind E new-window -n EMACS "emacs -nw"
